# gradual

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  plot-classes.ipynb
docs/: libgradual.excalidraw
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  math.cpp  math.hpp  operations.cpp  operations.hpp  optimizers.cpp  optimizers.hpp  tensor.cpp  tensor.hpp  utils.hpp
tests/: CMakeLists.txt  test_math.cpp  test_operations.cpp  test_optimizers.cpp  test_tensor.cpp
